# WoT_lab

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.txt
assets/: hangars.csv  modifications.csv  players.csv  tank_info.csv
include/: hangar.h  matches.h  players.h  ui.h  ui_export.h  utils.h
src/: hangar.c  main.c  matches.c  players.c  ui.c  utils.c
